--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <center><h1>Im Stronger ,Im Smarter, Im better Im better</h1></center>
     </header>
     <div id="bienvenida" style="text-align:center; padding-top:20vh;">
-        <img id="heroImage" src="/1.jpg" alt="Heroic Figure">
+        <img id="heroImage" src="1.jpg" alt="Heroic Figure">
         <p>🌹 Tatiana, me perdonas? 🌹<br>Si sientes que no puedes, toca el botón. Sé que te gustará. ❤️💕<br>💌 Te he preparado algo especial, lleno de cariño y recuerdos, ¡espero que lo disfrutes y pueda alegrarte el corazón! 💌</p>
         <button onclick="iniciarConteo()">Ver Sorpresa</button>
     </div>
-    <div id="transicion" style="display:none; position:fixed; top:0; left:0; height:100%; width:100%; background: url('/33.jpg') no-repeat center center; background-size: cover; text-align:center; padding-top:20vh;">
+    <div id="transicion" style="display:none; position:fixed; top:0; left:0; height:100%; width:100%; background: url('33.jpg') no-repeat center center; background-size: cover; text-align:center; padding-top:20vh;">
         <p id="cuentaRegresiva" style="font-size: 5em; color: white;"></p> <!-- Elemento para mostrar el conteo -->
     </div>
     <main style="display:none;">
